--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
+    "react-quill-new": "^3.4.6",
+    "slugmaster": "^1.2.5",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
