--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
+    "@hookform/resolvers": "^5.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -32,7 +33,8 @@
     "react-quill-new": "^3.4.6",
     "slugmaster": "^1.2.5",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
