--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-quill-new": "^3.4.6",
+    "react-type-animation": "^3.2.0",
     "slugmaster": "^1.2.5",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
