--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
+    "react-quill": "^2.0.0",
     "react-quill-new": "^3.4.6",
     "react-type-animation": "^3.2.0",
     "slugmaster": "^1.2.5",
